Update promotion dynamic route styling to replace promo link with button. Add truncate function to prevent excessively long promo descriptions from throwing off page layout.

--- a/app/promotions/[slug]/page.module.css
+++ b/app/promotions/[slug]/page.module.css
@@ -66,3 +66,19 @@
         padding-top: 48px;
     }
 }
+
+.promo > .paragraph:last-of-type {
+    text-align: center;
+}
+
+.link {
+    display: inline;
+}
+
+.link button {
+    display: inline;
+    padding-inline: 16px;
+    margin: 0;
+    margin-left: 8px;
+    width: fit-content;
+}
